--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="social_media">
           <ul>
             <a href="https://www.facebook.com"><i class="fa-brands fa-facebook"></i></i></a>
-            <a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
+            <a href="https://www.twitter.com/"><i class="fa-brands fa-twitter"></i></a>
             <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></i></a>
             <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
           </ul>
